fixed infinite jumps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-size: 14px;
-    min-width: 400px;
+    min-width: 411px;
     min-height: 400px;
 }
 
@@ -18,11 +18,14 @@ div {
     user-select: none;
     /* Non-prefixed version, currently  supported by Chrome, Opera and Firefox */
 }
-
+h1 {
+    font-size: 16px;
+}
 h2 {
     text-align: center;
     padding: 0;
     margin: 0;
+    font-size: 16px;
 }
 
 hr, div, body {
